set platform to bitfinex

--- a/default.cfg.example
+++ b/default.cfg.example
@@ -2,7 +2,7 @@
 
 [API]
 # Where to work? "Poloniex" or "Bitfinex". Default is "Poloniex"
-#exchange = Poloniex
+exchange = Bitfinex
 apikey = YourAPIKey
 secret = YourSecret
 
