Change some config

--- a/default.cfg.example
+++ b/default.cfg.example
@@ -43,9 +43,9 @@ spreadlend = 3
 #If gapbottom is set to 0, the first offer will be at the lowest possible rate.
 #However some low value is recommended to skip dust offers.
 # Gap modes: Raw, RawBTC, Relative
-gapMode = RawBTC
-gapbottom = 40
-gaptop = 200
+gapMode = Raw
+gapbottom = 50000
+gaptop = 200000
 
 #Daily lend rate threshold after which we offer lends for x days as opposed to 2.
 #If set to 0 all offers will be placed for a 2 day period (0.003-5)
@@ -124,14 +124,14 @@ jsonlogsize = 200
 #outputCurrency = BTC
 
 #Plugins allow extending Bot functionality with extra features.
-#plugins = AccountStats,Charts
+plugins = AccountStats,Charts
 
 #[ACCOUNTSTATS]
-#ReportInterval = 86400
+ReportInterval = 86400
 
 #[CHARTS]
-#DumpInterval = 21600
-#HistoryFile = www/history.json
+DumpInterval = 21600
+HistoryFile = www/history.json
 
 # Currencies can be configured here.
 #[BTC]
@@ -216,5 +216,5 @@ percentile_seconds = 259200
 
 [Daily_min]
 # This defaults to percentile, MACD is the moving average calc and should give better rates
-#method = MACD
-multiplier = 1.05
+method = MACD
+multiplier = 1.2
